# python-scripts

./: .gitignore  README.md  contentMd5.py  urldecode.py
CppLearning/: CPPnotes.txt  DemoExamples  DemoExamples.cpp
CppLearning/ControlFlow/: CodeDemo  CodeDemo.cpp  records.cpp  records.h
CppLearning/DemoExample/: DemoExamples  DemoExamples.cpp
CppLearning/DockerMongoDbWebServer/: CMakeLists.txt  main.cpp
CppLearning/DockerizedWebServer/: CMakeLists.txt  Dockerfile  Dockerfile.tmp  main.cpp
CppLearning/DockerizedWebServer/bbox/: Dockerfile
CppLearning/DockerizedWebServer/crow/crow/: http_connection.h
CppLearning/DockerizedWebServer/public/: about.html  index0.html
CppLearning/DockerizedWebServer/public/styles/: about.css
CppLearning/EssT/: 5stepClassObject  5stepClassObject.cpp  STLOverviewDemo  STLOverviewDemo.cpp  firstStep  firstStep.cpp  forthStepFunctions  forthStepFunctions.cpp  funch.h  items.txt  jumpTable  jumpTable.cpp  secondStep  secondStep.cpp  standardLibraryDemo  standardLibraryDemo.cpp  templateDemo  templateDemo.cpp  thirdStepOperator  thirdStepOperator.cpp
CppLearning/Functions/: FunctionDemo  FunctionDemo.cpp  records.cpp  records.h
CppLearning/FunctionsFiles/: courses.txt  fileIOdemo  (+6 more)
JS_Htmls/: FragSize.html  baseConversion.html  baseConversionBinary.html
LinuxUnixNotes/: KernelNotes.txt  dockerNotes.txt  pluralSightNotes.txt
collab/: 5MinNiftyData.ipynb  NIFTY50-20221020121500000_20220902122500000.csv  nifty50-5minCandle-details.csv
nse_fo/: N50.json  OneDayMomRank  StockGlass.py  StockGlass_requests.py  backtrader_main.py  commentry_urls  cricbuzz-CT2025.ipynb  cricbuzz-ipl2025.ipynb  cricbuzz.ipynb  csvCreator.py  csvCreatorNonParellel.py  drawdown.py  match-ipl2025.txt  match.txt  match_list  match_list.notes.txt  mc_essential_check.txt  mom_yf.py  moneycontrol_fetch.py  notes  nse500yfticker.txt  nse_expiry_future.py  nse_fo.py  nse_fo_1.py  nse_fo_next.py  nse_fo_tracker.py  nse_list.txt  nse_sec_list.py  tpTest.py  yahooF.py
pythonLearning/: Data Wrangling with Python 3.ipynb  DataExplorationandManipulation.ipynb  PluralSight-DatesTimes.ipynb  Portfolio_analysis.py  PythonDataStructure.ipynb  acronym.txt  flight_duration.py  notes.txt  pluralSight-Pandas.ipynb  recurring_flights.py  simpleDemo.ipynb
pythonScripts/: IPToHostConvertor.py  http_server.py  moneycontrol_fetch.py  urldecode.py  urlencode.py
(+109 files in other folders)
